--- a/templates/home.html
+++ b/templates/home.html
@@ -8,53 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" type="text/css" href="../static/home.css">
 
-
-    <style>
-        h1 {text-align: center;}
-        p {text-align: left;}
-        div {text-align: center;}
-        h2 {text-align: center;}
-
-        .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 200px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color:#ff00aa;/* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  <style>
+     button:hover {
+background-color: #002C30;
 }
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color:black;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Style page content */
-.main {
-  margin-left: 210px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-        </style>
+  </style>
+    
+      
 
 <title>AVL Trees</title>
 </head>
@@ -62,7 +24,7 @@
 
 <body>
 <!--<body style="background-image:url(anki.png); background-repeat: no-repeat; background-position:top ; background-size: cover; ">-->
-  <div class="code" style="position: absolute; top:0%">
+  <!--<div class="code" style="position: absolute; top:0%">
    
   {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -73,55 +35,145 @@
     {% endfor %}
   {% endif %}
 {% endwith %}
-</div>
+</div>-->
+
+
   <!--THE SIDE NAV BAR FOR THE SITE-->
-<div class="sidenav">
-  <a href="#" onclick="return show('AVL0');">Introduction</a>
-  <a href="#"onclick="return show('AVL1');">Operations</a>
-  <a href="#" onclick="return show('AVL2');">Our objective</a>
-  <br/><br/><br/><br/>
-  <a href="#"><button class="btn btn-success">Visualise</button></a>
-</div>
+
+  <div class="sidenav">
+    <!--<div class="underlinepink">-->
+        <!--<h3 style="color: #f25287;"> OPERATIONS</h3>-->
+        <!--<h3>OPERATIONS</h3>
+    </div> -->
+
+   
+    <div class="underlinepink">
+    <a href="#" onclick="return show('AVL0');"><h4><strong><em>Introduction</em></strong></h4></a>
+  </div>
+  <div class="underlinepink">
+    <a href="#"onclick="return show('AVL1');"><h4><strong><em>Operations</em></strong></h4></a>
+  </div>
+    
+  <div class="underlinepink">
+    <a href="#" onclick="return show('AVL3');"><h4><strong><em>BST vs AVL Trees</em></strong> </h4></a>
+  </div>
+  <div class="underlinepink">
+    <a href="#" onclick="return show('AVL4');"><h4><strong><em>Applications Of AVL Trees
+    </em></strong> </h4></a>
+  </div>
+  <div class="underlinepink">
+    <a href="#" onclick="return show('AVL2');"><h4><strong><em>Objective</em></strong> </h4></a>
+  </div>
+  
+    
+
+
+    
+    
+    <!--<a href="#" onclick="return show('Insert');">Insert</a>-->
+    <!--<a href="#"><button onclick="myFunction()" >Insert</button></a>
+    <a href="#"onclick="return show('Delete');">Delete</a>
+    <a href="#" onclick="return show('Search');">Search</a>-->
+    <br/><br/><br/><br/>
+    <br><br><br><br>
+
+  </div>
+
+
+
+
+
 <!--THE FUNCTION THAT HANDLES CHANGE OF SITE-->
 <script>
   var curr1='AVL0';
   function show(shown) {
     if(curr1!=shown){
-  document.getElementById(shown).style.display='block';
+        document.getElementById(shown).style.display='block';
   
-  document.getElementById(curr1).style.display='none';
-  curr1=shown;
-    }
+        document.getElementById(curr1).style.display='none';
+        curr1=shown;
+        }
   return false;
 }
   </script>
+
   <div class="main">
     <!--THE FIRST PAGE-->
   <div id="AVL0">
+    <h2><strong><em>Introduction</em></strong></h2>
     <h2>What are AVL trees?</h2>
-    <p>Named after their inventor Adelson, Velski & Landis, AVL trees are height balancing binary search tree. AVL tree checks the height of the left and the right sub-trees and assures that the difference is not more than 1. This difference is called the Balance Factor.</p>
+    <br>
+    <h5>Named after their inventor Adelson, Velski & Landis, AVL trees are height balancing binary search tree. AVL tree checks the height of the left and the right sub-trees and assures that their difference is not more than 1. This difference is called the Balance Factor.</h5>
 
   </div>
   <!--THE SECOND PAGE-->
   <div id="AVL1">
-    <h2>Operations</h2>
+    <h2><strong><em>Operations</em></strong></h2>
         <p><b>Insertion:</b>Adding an element to an AVL tree is similar to adding one in a BST, but the process takes into account an extra attribute, the balance factor for each node. This factor indicates whether the tree is left-heavy (the height of the left sub-tree is 1 greater than the right sub-tree), balanced (both sub-trees are the same height) or right-heavy (the height of the right sub-tree is 1 greater than the left sub-tree). If the balance would be destroyed by an insertion, a rotation is performed to correct the balance.</p>
-        <p><b>Rotation:</b></p>
-        <p><b>Deletion:</b></p>
-        <p><b>Searching:</b></p>
+        <p><b>Rotation:</b>
+          To balance itself, an AVL tree may perform the following four kinds of rotations: <br>
+
+ &emsp;Left rotation<br>
+&emsp;Right rotation<br>
+&emsp;Left-Right rotation<br>
+&emsp;Right-Left rotation<br>
+
+The first two rotations are single rotations and the next two rotations are double rotations. To have an unbalanced tree, we at least need a tree of height 2. With this simple tree, let's understand them one by one.</p>
+<p><b>Deletion:</b>Deletion can also be performed in the same way as it is performed in a binary search tree. Deletion may also disturb the balance of the tree therefore, various types of rotations are used to rebalance the tree.</p>
+        <p><b>Searching:</b>The property that all the values lesser than the value of a node lies on the left subtree and all the values greater than the value of a node lies on the right subtree helps to perform the searching in 
+          O(h) time (where h is the height of the tree).
+          Suppose we are on a node and the value to be searched is smaller than the value of the node. In that case, we will search for the value in the left subtree. Otherwise, if the value to be searched is larger, we will just search the right subtree.</p>
   </div>
+  
+  <!--THE FOURTH PAGE-->
+  <div id="AVL3">
+    <h2><strong><em>Why AVL Trees?</em></strong> </h2>
+    <br>
+        <h5>
+          Most of the BST operations (e.g., search, max, min, insert, delete.. etc) take O(h) time where h is the height of the BST. The cost of these operations may become O(n) for a skewed Binary tree. If we make sure that height of the tree remains O(Logn) after every insertion and deletion, then we can guarantee an upper bound of O(Logn) for all these operations. The height of an AVL tree is always O(Logn) where n is the number of nodes in the tree.</h5>
+          <br>
+  </div>
+
+  <!--THE FIFTH PAGE-->
+  <div id="AVL4">
+    <h2><strong><em>Applications Of AVL Trees</em></strong> </h2>
+    <br>
+        <h5>
+         1. AVL trees are mostly used for in-memory sorts of sets and dictionaries.<br>
+2. AVL trees are also used extensively in database applications in which insertions and deletions are fewer but there are frequent lookups for data required.<br>
+3. It is used in applications that require improved searching apart from the database applications.<br>
+          </h5>
+          <br>
+  </div>
+  
+
   <!--THE THIRD PAGE-->
   <div id="AVL2">
-    <h2>Our objective: </h2>
-        <p>blah</p>
+    <h2><strong><em>Our objective:</em></strong> </h2>
+    <br>
+        <h5>This page has been developed to facilitate students from various
+          backgrounds to efficiently learn about a slightly complex data structure, AVL tree.
+          We hope that with our effective animations and user friendly interface helps students to not only try out multiple test cases and visualize the
+          rotations but also, to quickly learn and apply these concepts.</h5>
+          <br>
   </div>
+
+  
   <!--EXPLICITLY HIDING THE OTHER TWO-->
   <script type="text/javascript">
     document.getElementById('AVL1').style.display='none';
     document.getElementById('AVL2').style.display='none';
+    document.getElementById('AVL3').style.display='none';
+    document.getElementById('AVL4').style.display='none';
+
   </script>
+    <a href={{url_for('visualization')}}><button type="button" class="btn btn-default"  style="height:100px;width:200px;background-color: #0d7377" ;><em><h1>Visualise!</h1></em></button></a>
+
+
+
   </div>
 
+ 
    
    
 
