--- a/templates/visualize.html
+++ b/templates/visualize.html
@@ -16,7 +16,7 @@
         
         .button3 {border-radius: 9px;}
         button:hover {
-        background-color: #002C30;
+background-color: #002C30;
 }
     </style>
     </head>
@@ -45,7 +45,7 @@
     <a href="#" onclick="return show('Search');">Search</a>-->
     <br/><br/><br/><br/>
     <br>
-    <a href={{url_for('home')}}><button type="button" class="btn btn-default" style="background-color: #f25287;">Back</button></a>
+    <a href="templates/home.html"><button type="button" class="btn btn-default" background-color: #f25287;>Back</button></a>
   </div>
 
 
