--- a/templates/home.html
+++ b/templates/home.html
@@ -41,10 +41,7 @@ background-color: #002C30;
   <!--THE SIDE NAV BAR FOR THE SITE-->
 
   <div class="sidenav">
-    <!--<div class="underlinepink">-->
-        <!--<h3 style="color: #f25287;"> OPERATIONS</h3>-->
-        <!--<h3>OPERATIONS</h3>
-    </div> -->
+    
 
    
     <div class="underlinepink">
@@ -167,7 +164,7 @@ The first two rotations are single rotations and the next two rotations are doub
     document.getElementById('AVL4').style.display='none';
 
   </script>
-    <a href={{url_for('visualization')}}><button type="button" class="btn btn-default"  style="height:100px;width:200px;background-color: #0d7377" ;><em><h1>Visualise!</h1></em></button></a>
+    <a href="../visualize.html"><button type="button" class="btn btn-default" background-color: #0d7377; style="height:100px;width:200px" ;><em><h1>Visualise!</h1></em></button></a>
 
 
 
