--- a/templates/widgets.html
+++ b/templates/widgets.html
@@ -40,7 +40,6 @@ background-color: pink;
 <style>
     button:hover {
       background-color: #e4f9f5;
-      color: purple;
     }
     </style>
 
@@ -59,7 +58,7 @@ background-color: pink;
     
        
         <br>
-        <a href="#"><button type="button" data-toggle="modal" data-target="#exampleModalLongcreate" class="btn btn-default" style="background-color:#0d7377;" style="color: seagreen;">Create</button></a>
+        <a href="#"><button type="button" data-toggle="modal" data-target="#exampleModalLongcreate" class="btn btn-default" style="background-color:#0d7377;">Create</button></a>
         <a href="#"><button type="button" data-toggle="modal" data-target="#exampleModalLonginsert" class="btn btn-default" style="background-color:#0d7377;">Insert</button></a>
         <a href="#"><button type="button" data-toggle="modal" data-target="#exampleModalLongdelete" class="btn btn-default" style="background-color:#0d7377;" >Delete</button></a>
         <a href="#"><button type="button" data-toggle="modal" data-target="#exampleModalLongsearch" class="btn btn-default" style="background-color:#0d7377;" >Search</button></a>
