--- a/templates/sample.html
+++ b/templates/sample.html
@@ -1,4 +1,3 @@
-
 <html> 
     <head> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script> 
@@ -1666,7 +1665,7 @@
         
         
         
-        
+        //ankithax  
     
         "906";
         async function testmain() {
